--- a/css/camara-web.css
+++ b/css/camara-web.css
@@ -1,3 +1,7 @@
+body{
+  text-align:center;
+  margin:0 auto;
+}
 .imagen{
     background-position: center center;
     background-repeat: no-repeat;
